@@ -88,3 +88,9 @@ REL1_10_5:
 - Corrected geshi, extensionclass, addscriptcss for PHP warnings (usage of deprecated PHP features)
 - Adjusted 'url' field in extensions' credits
 - ParserPhase2: Fixed client side caching logic due to a bug in PHP's preg_match_all function
+- ExtensionClass: added 'AutoMethods' for initializing a derived class's hooks, parser functions & magic words automatically
+- ExtensionClass: added support for adding 'head' and 'body' scripts links whilst preserving parser caching coherency.
+- Added 'CacheTools' extension
+- Added more documentation in BizzWikiSettings.php
+- Added BizzWiki logo design files
+
